fix gallery padding on smaller screens

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -216,9 +216,19 @@ footer {
 // gallery
 .gallery {
   img {
-    padding: 2rem;
-    max-width: calc(100vw - 2 * 2rem);
-    max-height: calc(100vh - 2 * 2rem);
+    padding: 0.5rem;
+    max-width: calc(100vw - 1rem);
+    max-height: calc(100vh - 1rem);
+    @include query($bp-tablet){
+      padding: 1rem;
+      max-width: calc(100vw - 2rem);
+      max-height: calc(100vh - 2rem);
+    }
+    @include query($bp-desktop){
+      padding: 2rem;
+      max-width: calc(100vw - 4rem);
+      max-height: calc(100vh - 4rem);
+    }
   }
 }
 
